# anjo-ai-companion

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: bootstrap.yml
anjo/cli/: main.py
anjo/core/: crypto.py  db.py  email.py  emotion.py  forgetting.py  history.py  llm.py  logger.py  outreach.py  policy.py  prompt_builder.py  safety.py  self_core.py
anjo/dashboard/: app.py  auth.py  background_tasks.py  session_store.py  watchers.py
anjo/dashboard/middleware/: rate_limit.py
anjo/dashboard/routes/: admin_routes.py  auth_routes.py  chat_routes.py  forget_routes.py  memory_routes.py  mobile_auth_routes.py  reset_routes.py  self_core_routes.py  story_routes.py
anjo/dashboard/static/: chat.html  index.html  landing.html  privacy.html  terms.html
anjo/graph/: conversation_graph.py  edges.py  nodes.py
anjo/memory/: embedder.py  journal.py  long_term.py  memory_graph.py
anjo/reflection/: engine.py
docs/: anjo-technical.md
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(app)/: _layout.tsx  forget.tsx  onboarding.tsx  settings.tsx  story.tsx
mobile/app/(app)/chat/: index.tsx  types.ts
mobile/app/(auth)/: login.tsx  register.tsx
mobile/components/: AnimatedOrb.tsx
mobile/lib/: sse.ts  storage.ts  theme-context.tsx
scripts/: migration_v2.py  server_setup.sh
tests/: conftest.py  test_api.py  test_crypto.py  test_facts.py  test_graph_integration.py  test_memory.py  test_prelaunch_sweep.py  test_regressions.py  test_sweep.py  test_sweep_fixes.py
(+12 files in other folders)
