[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anjo"
version = "0.1.0"
description = "AI companion that gets to know you, then connects you with real humans."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "aiofiles>=23.0.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29.0",
    "vaderSentiment>=3.3.2",
    "cryptography>=42.0.0",
]

[project.scripts]
anjo = "anjo.cli.main:app"
anjo-dashboard = "anjo.dashboard.app:run"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: imports after load_dotenv() / env reads — intentional throughout the codebase
# E741: OCEAN model uses single-letter field names (O, C, E, A, N) — domain convention
ignore = ["E402", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["anjo"]
